--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
-
+        <title>AirBnB Clone</title>
     </head>
     <body style="padding: 0px; margin: 0px;">
-        <header style="background-color: red; height: 70px; width: 100%">
+        <header style="background-color: #ff0000; height: 70px; width: 100%">
         </header>
-        <footer style="background-color: green; height: 60px; width: 100%; text-align-last: center; position: fixed; bottom: 0px;">
+        <footer style="background-color: #00ff00; height: 60px; width: 100%; text-align-last: center; position: fixed; bottom: 0px; line-height: 30px;">
             <p>Best School</p>
         </footer>
     </body>
