--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -6,8 +6,6 @@
     <body style="padding: 0px; margin: 0px;">
         <header style="background-color: #ff0000; height: 70px; width: 100%">
         </header>
-        <footer style="background-color: #00ff00; height: 60px; width: 100%; text-align-last: center; position: fixed; bottom: 0px; line-height: 30px;">
-            <p>Best School</p>
-        </footer>
+        <footer style="background-color: #00ff00; height: 60px; width: 100%; text-align: center; position: fixed; bottom: 0px; line-height: 60px;">Best School</footer>
     </body>
 </html>
